Put icone for weather and change some CSS Style

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <table>
         <tr>
             <td>
-                <p id="picture">☀️</p>
+                <img id="picture" src=""></img>
             </td>
-            <td>
+            <td id=" tdtemp">
                 <p><span id="temp">Undefined</span>°C</p>
             </td>
-            <td>
-                <p><span id="hum">Undefined</span>%</p>
+            <td id="linfo">
+                <p>Humidity :<span id="hum">Undefined</span>%</p>
             </td>
             <td>
                 <p style="padding-left: 200px;" id="Date">Undefined</p>
@@ -26,6 +26,6 @@
     </table>
 
     
-    <p><span id="weather">Undefined</span></p>
+    <!--<p><span id="weather">Undefined</span></p>-->
 </body>
 </html>
