add some data and little CSS change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <p><span id="temp">Undefined</span>°C</p>
             </td>
             <td id="linfo">
-                <p>Humidity :<span id="hum">Undefined</span>%</p>
+                <p id="ltextinfo">Precipitaion : <span id="precipitation">N/A</span>%</p>
+                <p id="ltextinfo">Humidity : <span id="hum">N/A</span>%</p>
+                <p id="ltextinfo">Wind : <span id="windspeed">N/A</span> Km/h</p>
             </td>
             <td>
                 <p style="padding-left: 200px;" id="Date">Undefined</p>
