--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
                 <img id="picture" src=""></img>
             </td>
             <td id=" tdtemp">
-                <p><span id="temp">Undefined</span>°C</p>
+                <p><span id="temp">Undefined</span></p>
+            </td>
+            <td>
+                <p id="celcius">°C</p>
             </td>
             <td id="linfo">
-                <p id="ltextinfo">Precipitaion : <span id="precipitation">N/A</span>%</p>
+                <p id="ltextinfo">Precipitation : <span id="precipitation">N/A</span>%</p>
                 <p id="ltextinfo">Humidity : <span id="hum">N/A</span>%</p>
                 <p id="ltextinfo">Wind : <span id="windspeed">N/A</span> Km/h</p>
             </td>
             <td>
-                <p style="padding-left: 200px;" id="Date">Undefined</p>
+                <p id="Date">Undefined</p>
+                <img id="season">
             </td>
         </tr>
     </table>
