--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p><span id="temp">Undefined</span></p>
             </td>
             <td>
-                <p> <span id="C" onclick="changeUnit(C)">°C</span>|<span id='F' onclick="changeUnit('F')">°F</span></p>
+                <p> <span id="C" onclick="changeUnit('C')">°C</span>|<span id='F' onclick="changeUnit('F')">°F</span></p>
             </td>
             <td id="linfo">
                 <p id="ltextinfo">Precipitation : <span id="precipitation">N/A</span>%</p>
