--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <script src="main.js"></script>
 <body>
-    <table>
+    <table id="weatherTable">
         <tr>
             <td>
                 <img id="picture" src=""></img>
