now icon for forecast !

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table id="weatherTable">
         <tr>
             <td>
-                <img id="picture" src=""></img>
+                <img id="picture" class="weatherIcon" src=""></img>
             </td>
             <td id=" tdtemp">
                 <p><span id="temp">Undefined</span></p>
