Added label of the forecast weather

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <p> <span id="C" onclick="changeUnit('C')">°C</span> | <span id='F' class="unotsel" onclick="changeUnit('F')">°F</span></p>
                 </td>
                 <td id="linfo">
-                    <p id="ltextinfo">Precipitation : <span id="precipitation">N/A</span>%</p>
-                    <p id="ltextinfo">Humidity : <span id="hum">N/A</span>%</p>
-                    <p id="ltextinfo">Wind : <span id="windspeed">N/A</span> Km/h</p>
+                    <p class="ltextinfo">Precipitation : <span id="precipitation">N/A</span>%</p>
+                    <p class="ltextinfo">Humidity : <span id="hum">N/A</span>%</p>
+                    <p class="ltextinfo">Wind : <span id="windspeed">N/A</span> Km/h</p>
                 </td>
                 <td>
                     <p id="Date">Undefined</p>
