--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Weather"?>
+    <meta property="og:description" content="You can see your local weather for the weeks"
     <title>Weather</title>
     <link rel="stylesheet" href="main.css">
 </head>
