add metadata image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Weather"/>
     <meta property="og:description" content="You can see your local weather for the weeks"/>
+    <meta property="og:image" content="./img/summer.png"/>
     <title>Weather</title>
     <link rel="stylesheet" href="main.css">
 </head>
