adding some detail

--- a/DrawingSite/index.html
+++ b/DrawingSite/index.html
@@ -27,99 +27,101 @@
     </dialog>
 </header>
 <body>
-<div class="about">
-    <h1 style="margin: 0">
-        Sionra Cadish
-    </h1>
-    <p><strong>Developpeur et Dessinateur</strong></p>
-    <a href="about.html">
-        <button class="about-button">
-            A propos de moi
-        </button>
-    </a>
-</div>
-<div class="pictures">
-    <div class="image-container">
-        <img class="image" src="assets/pictures/background_exercice.png"/>
-        <div class="image-text">
-            Premier background<br/>
-            <a href="assets/pictures/background_exercice.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
+<div class="page-container">
+    <div class="padding-fixer">
+        <div class="about">
+            <h1>
+                Sionra Cadish
+            </h1>
+            <p><strong>Developpeur et Dessinateur</strong></p>
+            <a href="about.html">
+                <button class="about-button">
+                    A propos de moi
                 </button>
             </a>
         </div>
-    </div>
+        <div class="pictures">
+            <div class="image-container">
+                <img class="image" src="assets/pictures/background_exercice.png"/>
+                <div class="image-text">
+                    Premier background<br/>
+                    <a href="assets/pictures/background_exercice.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
 
-    <div class="image-container">
-        <img class="image" src="assets/pictures/sketch_creation_oc.png"/>
-        <div class="image-text">
-            Creation d'un OC<br/>
-            <a href="assets/pictures/sketch_creation_oc.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
-                </button>
-            </a>
+            <div class="image-container">
+                <img class="image" src="assets/pictures/sketch_creation_oc.png"/>
+                <div class="image-text">
+                    Creation d'un OC<br/>
+                    <a href="assets/pictures/sketch_creation_oc.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="image-container">
+                <img class="image" src="assets/pictures/Hilda-and-Twig.png"/>
+                <div class="image-text">
+                    Fan art de la serie Hilda <br/>
+                    <a href="assets/pictures/Hilda-and-Twig.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="image-container">
+                <img class="image" src="assets/pictures/Shirou.png"/>
+                <div class="image-text">
+                    Fan art de la serie BNA<br/>
+                    <a href="assets/pictures/Shirou.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="image-container">
+                <img class="image" src="assets/pictures/random_demon.png"/>
+                <div class="image-text">
+                    Un personnage<br/>
+                    <a href="assets/pictures/random_demon.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
+
+            <div class="image-container">
+                <img class="image" src="assets/pictures/Lea%20head.png"/>
+                <div class="image-text">
+                    Tete du personage de LEA de CrossCode<br/>
+                    <a href="assets/pictures/Lea%20head.png" target="_blank">
+                        <button  class="about-button">
+                            Voir en entier
+                        </button>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="image-container">
-        <img class="image" src="assets/pictures/Hilda-and-Twig.png"/>
-        <div class="image-text">
-            Fan art de la serie Hilda <br/>
-            <a href="assets/pictures/Hilda-and-Twig.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
-                </button>
-            </a>
-        </div>
-    </div>
-
-    <div class="image-container">
-        <img class="image" src="assets/pictures/Shirou.png"/>
-        <div class="image-text">
-            Fan art de la serie BNA<br/>
-            <a href="assets/pictures/Shirou.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
-                </button>
-            </a>
-        </div>
-    </div>
-
-    <div class="image-container">
-        <img class="image" src="assets/pictures/random_demon.png"/>
-        <div class="image-text">
-            Un personnage<br/>
-            <a href="assets/pictures/random_demon.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
-                </button>
-            </a>
-        </div>
-    </div>
-
-    <div class="image-container">
-        <img class="image" src="assets/pictures/Lea%20head.png"/>
-        <div class="image-text">
-            Tete du personage de LEA de CrossCode<br/>
-            <a href="assets/pictures/Lea%20head.png" target="_blank">
-                <button  class="about-button">
-                    Voir en entier
-                </button>
-            </a>
-        </div>
-    </div>
-</div>
-<div class="lpictures">
-
+    <footer>
+        <p>
+            ©2024 Sionra Cadish
+        </p>
+    </footer>
 </div>
 </body>
-<footer>
-    <p>
-        ©2024 Sionra Cadish
-    </p>
-</footer>
 
 <script>
     const closeDialog = document.getElementById("closeDialog");
