--- a/DrawingSite/about.html
+++ b/DrawingSite/about.html
@@ -27,23 +27,29 @@
     </dialog>
 </header>
 <body>
-<div class="about-container">
-    <div class="about-info">
-        <h1 style="margin: 0; font-size: 64px">
-            Sionra Cadish
-        </h1>
-        <p class="about-font-size" style="margin: 0"><strong>Developpeur et Dessinateur</strong></p>
-        <p class="about-font-size">Je suis Sionra Cadish</p>
-        <p class="about-font-size">Je suis principalement développeur, mais je dessine aussi à côté. Le dessin est un hobby que j'aime et sur lequel j'aime passer du temps.</p>
+<div class="page-container">
+    <div class="padding-fixer">
+        <div class="about-container">
+            <div class="about-info">
+                <h1 style="margin: 0; font-size: 64px">
+                    Sionra Cadish
+                </h1>
+                <p class="about-font-size"><strong>Developpeur et Dessinateur</strong></p>
+                <p class="about-font-size">Je suis Sionra Cadish</p>
+                <p class="about-font-size">Je suis principalement développeur, mais je dessine aussi à côté. Le dessin est un hobby que j'aime et sur lequel j'aime passer du temps.</p>
+            </div>
+            <img class="about-illustration" src="assets/pictures/sketch_creation_oc.png"/>
+        </div>
     </div>
-    <img class="about-illustration" src="assets/pictures/sketch_creation_oc.png"/>
+
+    <footer>
+        <p>
+            ©2024 Sionra Cadish
+        </p>
+    </footer>
 </div>
+
 </body>
-<footer>
-    <p>
-        ©2024 Sionra Cadish
-    </p>
-</footer>
 
 <script>
     const closeDialog = document.getElementById("closeDialog");
