--- a/DrawingSite/contact.html
+++ b/DrawingSite/contact.html
@@ -25,41 +25,46 @@
     </dialog>
 </header>
 <body>
-<div class="form">
-    <h1>Contact</h1>
-    <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/f/movqjdlk"
-          method="POST">
-        <div>
-            <input type="text" class="form-element" id="name" name="name" placeholder="Your Name" required="required"
-                   data-validation-required-message="Please enter your name"/>
-            <p class="help-block"></p>
-        </div>
-        <div>
-            <input type="email" class="form-element" id="email" name="email" placeholder="Your Email"
-                   required="required" data-validation-required-message="Please enter your email"/>
-            <p></p>
-        </div>
-        <div >
-            <input type="text" class="form-element" id="subject" name="subject" placeholder="Subject"
-                   required="required" data-validation-required-message="Please enter a subject"/>
-            <p></p>
-        </div>
-        <div >
+<div class="page-container">
+    <div class="padding-fixer">
+        <h1 style="text-align: center">Contact</h1>
+        <div class="form">
+            <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/f/movqjdlk"
+                  method="POST">
+                <div>
+                    <input type="text" class="form-element" id="name" name="name" placeholder="Your Name" required="required"
+                           data-validation-required-message="Please enter your name"/>
+                    <p class="help-block"></p>
+                </div>
+                <div>
+                    <input type="email" class="form-element" id="email" name="email" placeholder="Your Email"
+                           required="required" data-validation-required-message="Please enter your email"/>
+                    <p></p>
+                </div>
+                <div >
+                    <input type="text" class="form-element" id="subject" name="subject" placeholder="Subject"
+                           required="required" data-validation-required-message="Please enter a subject"/>
+                    <p></p>
+                </div>
+                <div >
             <textarea id="message" class="form-element textarea" name="message" placeholder="Message" required="required"
                       data-validation-required-message="Please enter your message"></textarea>
-            <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <button type="submit" class="about-button" id="sendMessageButton">Send Message</button>
+                </div>
+            </form>
         </div>
-        <div>
-            <button type="submit" class="about-button" id="sendMessageButton">Send Message</button>
-        </div>
-    </form>
+    </div>
+
+    <footer>
+        <p>
+            ©2024 Sionra Cadish
+        </p>
+    </footer>
 </div>
 </body>
-<footer>
-    <p>
-        ©2024 Sionra Cadish
-    </p>
-</footer>
 
 <script>
     const closeDialog = document.getElementById("closeDialog");
