--- a/index.html
+++ b/index.html
@@ -288,6 +288,28 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="portfolio-img">
+                            <img src="img/drawing-site.png" alt="Image" id="meteo-img" >
+                            <div class="portfolio-content">
+                                <div class="portfolio-text-container">
+                                    <h4 class="portfolio-title">Site d'artiste</h4>
+                                    <p>
+                                        Un site web pour un artiste, afin d'afficher des oeuvres crée par l'artiste. 
+                                    </p>
+                                    <ul class="portfolio-btn">
+                                        <a href="https://sionra.github.io/DrawingSite/index.html" target="_blank"><li class="btn">Démo</li></a>
+                                    </ul>
+                                    <ul class="portfolio-icons">
+                                        <li><i class="fa-brands fa-html5"></i></li>
+                                        <li><i class="fa-brands fa-css3-alt"></i></li>
+                                        <li><i class="fa-brands fa-js"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-img">
                             <img src="img/bataille-navale.png" alt="Image">
